--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
 
 .header h1 {
   /* Non-accessible color */
-  color: #caae51;
+  color: #edc84b;
   /* color: #af8602; */
 
   text-transform: uppercase;
@@ -57,7 +57,7 @@ body {
   display: block;
   content: '';
   height: 3px;
-  width: 8rem;
+  width: 12rem;
   background-color: #edc84b;
   position: absolute;
   top: calc(50% - 1px);
